fixed memory leaks

--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -68,10 +68,9 @@ else
     }
     public string JoinText { get; set; } = "Host";
 
-    protected override void OnInitialized()
+    protected override async Task OnInitializedAsync()
     {
         server.OnLocationChanged = () => StateHasChanged();
-        base.OnInitialized();
     }
 
     public async void Join()
