added unit tests and navigation based on room state

--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using ChickenTinder.Client.Data
-@inject NavigationManager nav
-@inject ServerConnection server;
+@inject INavigationManager nav
+@inject IServerConnection server;
 
 @if (!_isLoading)
 {
