added unit tests for swipe page

--- a/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/MatchFound.razor
@@ -2,9 +2,9 @@
 @using ChickenTinder.Client.Data
 @using ChickenTinder.Client.Services
 @using ChickenTinder.Shared.Models
-@inject ServerConnection ServerConnection
-@inject NavigationManager NavMan
-@inject InterloopService _interloopService;
+@inject IServerConnection ServerConnection
+@inject INavigationManager NavMan
+@inject IInterloopService _interloopService;
 @inject IJSRuntime _js;
 
 <HeaderView></HeaderView>
