--- a/ChickenTinder/ChickenTinder/Client/Shared/HeaderView.razor
+++ b/ChickenTinder/ChickenTinder/Client/Shared/HeaderView.razor
@@ -1,5 +1,5 @@
-﻿@inject ServerConnection server
-@inject NavigationManager nav 
+﻿@inject IServerConnection server
+@inject INavigationManager nav 
 <div class="header-right">
     <UserBadge User="@server.User" Width="64"></UserBadge>
 </div>
