--- a/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
+++ b/ChickenTinder/ChickenTinder/Client/Pages/Index.razor
@@ -14,6 +14,12 @@
     <p class="center-all">Find Single Restaurants Near You</p>
 
     <div class="footer">
+        @if (!string.IsNullOrWhiteSpace(Message))
+        {
+            <div class="center-all">
+                <p style="color:red; margin: 0px">@Message</p>
+            </div>
+        }
         <div class="center-all">
             @if (!string.IsNullOrWhiteSpace(server.User.Latitude))
             {
@@ -41,11 +47,11 @@
         <div class="center-bottom">
             @if (server.IsLocationSet || !string.IsNullOrWhiteSpace(Code))
             {
-                <button class="btn" @onclick="Join">@JoinText</button>
+                <button id="start" class="btn" @onclick="Join">@JoinText</button>
             }
             else
             {
-                <button disabled class="btn" @onclick="Join">@JoinText</button>
+                <button id="start" disabled class="btn" @onclick="Join">@JoinText</button>
             }
 
         </div>
@@ -78,6 +84,9 @@ else
             _code = value;
         }
     }
+    [SupplyParameterFromQuery(Name = "message")]
+    [Parameter]
+    public string? Message { get; set; }
     public string JoinText { get; set; } = "Host";
 
     protected override async Task OnInitializedAsync()
